<resources>
    <string name="app_name">EatNowCapstone</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="scan">Scan</string>
    <string name="enter_bmi">Enter BMI</string>
    <string name="submit">Submit</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="detail">Detail</string>
    <string name="description">Deskripsi</string>
    <string name="genderAsk">What is Your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="sign_out">Sign Out</string>
    <string name="account">Account</string>
    <string name="edit_bmi">Edit BMI</string>
    <string name="tap_edit">Tap to Edit Your BMI</string>
    <string name="change_password">Change Password</string>
    <string name="tap_change">Change Your Password Here</string>
    <string name="bantuan">Bantuan dan Masukan</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="log_out">Log Out</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="current">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="reEnter">Re-Enter New Password</string>
</resources>